<resources>
    <string name="app_name">Valley Pres</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Following</string>
    <string name="nav_header_subtitle">Christ Together</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Account Info</string>
    <string name="action_delete">Delete</string>
    <string name="check_small_group">Delete</string>
    <string name="radio_text_church">Church</string>
    <string name="radio_text_small">Small Group</string>
    <string name="radio_text_youth">Youth</string>
    <string name="radio_text_adult">Adult</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_logged_in">Logged in Status</string>
    <string name="pref_description_social_recommendations">You will remain signed in until you toggle this
        switch. If you switch this off the log in menu will become active again.
    </string>
    <string name="pref_loaded_name">Will display after logging in
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Logout</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_street">Street Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_zip">Zip</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Tabian Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Profile</string>
    <string name="current_password">Current Password</string>
    <string name="change_email_password">Enter current password with updated email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="login_check_box_text">Stay logged in as log as this is checked</string>
    <string name="action_register">Register for an account</string>
    <string name="dialog_change_photo">ChangePhotoDialog</string>
    <string name="dbnode_users">users</string>
    <string name="dbnode_events">events</string>
    <string name="dbnode_reservation">reservation</string>
    <string name="dbnode_small_groups">small_groups</string>
    <string name="dbnode_chatroom">chatroom</string>
    <string name="dbnode_chat">chat</string>
    <string name="show_email">Show email in directory</string>
    <string name="show_phone">Show phone in directory</string>
    <string name="show_address">Show address in directory</string>
    <string name="field_creator_id">creator_id</string>
    <string name="field_security_level">security_level</string>
    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>
    <string name="field_street_address">street_address</string>
    <string name="field_city">city</string>
    <string name="field_state">state</string>
    <string name="field_zip">zip</string>
    <string name="field_show_email">show_email</string>
    <string name="field_show_phone">show_phone</string>
    <string name="field_show_address">show_address</string>
    <string name="field_subscription1">small_group_subscription1</string>
    <string name="field_subscription2">small_group_subscription2</string>
    <string name="field_subscription3">small_group_subscription3</string>
    <string name="field_subscription4">small_group_subscription4</string>
    <string name="field_subscription5">small_group_subscription5</string>
    <string name="field_event_title">event_title</string>
    <string name="field_event_date">event_date</string>
    <string name="field_event_time">event_time</string>
    <string name="field_event_desc">event_desc</string>
    <string name="field_event_millis">event_millis</string>
    <string name="field_event_filter">event_filter</string>
    <string name="field_event_group">group_number</string>
    <string name="field_event_key">event_key</string>
    <string name="field_event_creator">event_create_by</string>
    <string name="field_event_location">event_location</string>
    <string name="field_reservation_member_number">member_number</string>
    <string name="field_reservation_event_key">event_key</string>
    <string name="field_reservation_member_name">member_name</string>
    <string name="field_reservation_reply">reply</string>
    <string name="field_chatroom_subname">chatroom_subname</string>
    <string name="field_chatroom_create_by">chatroom_created_by</string>
    <string name="field_chatroom_name">chatroom_name</string>
    <string name="field_chatroom_group_key">chatroom_group_key</string>
    <string name="field_chatroom_key">chatroom_key</string>
    <string name="field_small_group_name">sg_title</string>
    <string name="field_small_group_poc">sg_point_of_contact</string>
    <string name="field_small_group_desc">sg_desc</string>
    <string name="field_small_group_meeting">sg_meeting_place</string>
    <string name="field_small_group_number">sg_group_number</string>
    <string name="field_small_group_key">sg_key</string>
    <string name="field_small_group_created_by">sg_created_by</string>
    <string name="field_small_group_filter">sg_filter</string>
    <string name="field_chat_message">message</string>
    <string name="field_chat_timestamp">timestamp</string>
    <string name="field_chat_created_by">created_by</string>
    <string name="answer_yes">YES</string>
    <string name="answer_no">NO</string>
    <string name="title_activity_member_detail">Member Details</string>
    <string name="title_activity_membership_list">Directory</string>
    <string name="title_activity_events_list">Events</string>
    <string name="title_activity_event__details">Event Details</string>
    <string name="event_title">Event Title</string>
    <string name="save_event">Save the event?</string>
    <string name="title_activity_small_group_list">SmallGroupList</string>
    <string name="title_activity_create_small_group">CreateSmallGroupActivity</string>
    <string name="small_group_poc">Point of Contact</string>
    <string name="hint_name_of_sg">Name of Small Group</string>
    <string name="hint_short_desc_sg">Description of Small Group</string>
    <string name="hint_sg_meeting_place">Typical meeting place</string>
    <string name="radio_sg_mens">Mens</string>
    <string name="radio_sg_womens">Womens</string>
    <string name="radio_sg_youth">Youth</string>
    <string name="radio_filter_adult">Adult</string>
    <string name="create_small_group">Create this small group</string>
    <string name="title_activity_small_group_details">SmallGroupDetails</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="small_group_members">Members</string>
    <string name="RSVP">RSVP</string>
    <string name="rsvp_yes">Going</string>
    <string name="rsvp_no">Not Going</string>
    <string name="decline">Decline</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chatroom">ChatroomActivity</string>
    <string name="chat">Enter Text</string>
    <string name="badword1">fuck</string>
    <string name="badword2">ass</string>
    <string name="badword3">cunt</string>
    <string name="badword4">bitch</string>
    <string name="badword5">pussy</string>
    <string name="badword6">fucking</string>
    <string name="badword7">fuckin</string>
    <string name="badword8">asshat</string>
    <string name="badword9">retarded</string>
    <string name="badword10">retard</string>
    <string name="badword11">bitching</string>
</resources>