<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/account_settings"
        android:textColor="@color/Black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintEnd_toStartOf="@+id/show_email_check"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_street"
        app:layout_constraintEnd_toStartOf="@+id/show_phone_check"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_street"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_zip"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/input_city"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_state"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_zip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_zip"
        android:inputType="textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toStartOf="@+id/show_address_check"
        app:layout_constraintStart_toEndOf="@+id/input_state" />

    <EditText
        android:id="@+id/input_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textHeader"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_city"
        android:inputType="text|textPostalAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_zip"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_below="@+id/textHeader"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_save"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Change Password"
        android:textColor="@color/linkBlue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_password"
        app:layout_constraintTop_toTopOf="@+id/input_password" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blue_button"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_marginBottom="8dp"
        android:hint="@string/change_email_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/input_phone"
        app:layout_constraintStart_toStartOf="@+id/input_email" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/show_email_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/show_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_email" />

    <CheckBox
        android:id="@+id/show_phone_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/show_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_phone" />

    <CheckBox
        android:id="@+id/show_address_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/show_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_zip" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/input_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeader"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

</android.support.constraint.ConstraintLayout>